objects/Case_Category__c.object
<CustomObject>
    <description>for Expert Center tagging</description>
    <fields>
        <fullName>Category1__c</fullName>
        <inlineHelpText>Highest level of roll-up</inlineHelpText>
        <label>Category1</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category2__c</fullName>
        <label>Category2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category3__c</fullName>
        <label>Category3</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_Tag_Name__c</fullName>
        <formula>IF( ISBLANK(Category2__c) ,  Category1__c, 
IF(ISBLANK(Category3__c),  Category1__c &amp;&quot;-&quot; &amp;Category2__c ,
IF(ISBLANK(Category4__c),  Category1__c &amp;&quot;-&quot; &amp;Category2__c&amp;&quot;-&quot;&amp; Category3__c ,
Category1__c &amp;&quot;-&quot; &amp;Category2__c&amp;&quot;-&quot;&amp; Category3__c&amp;&quot;-&quot;&amp; Category4__c ) ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Content Tag Name</label>
        <type>Text</type>
    </fields>
    <label>Case Category</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Category1__c</columns>
        <columns>Category2__c</columns>
        <columns>Category3__c</columns>
        <columns>Category4__c</columns>
        <columns>Content_Tag_Name__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>Category#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>